--- a/customizations/organization/15493/Progroup Translation/04_EN/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/04_EN/Intern/page2.css
@@ -69,39 +69,39 @@
 }
 
 .customization2_attendee-1 .customization2_attendee_title:after {
-    content: "64";
+    content: "I’M COMING ON MY OWN";
     font-size: 16px;
 }
 
 .customization2_attendee_contact-data_headline::after {
-    content: "66";
+    content: "Personal details";
     text-indent: 0px;
     display: block;
     line-height: initial;
 }
 
 .customization2_attendee_contact-data_salutation_label:after {
-    content: "67";
+    content: "Title";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_title_label:after {
-    content: "73";
+    content: "Title (optional)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_first-name_label:after {
-    content: "72";
+    content: "First name";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_last-name_label:after {
-    content: "76";
+    content: "Last name";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street:before {
-    content: "78";
+    content: "Private address";
     display: block;
     margin-top: 24px;
     font-size: 1rem;
@@ -110,7 +110,7 @@
 }
 
 .customization2_attendee_contact-data_street > vv-input::before {
-    content: "79";
+    content: "(So we can send you documents such as your ticket, programme and more information in the post)";
     display: block;
     padding-bottom: 16px;
     font-size: 14px;
@@ -118,47 +118,47 @@
 }
 
 .customization2_attendee_contact-data_street_label:after {
-    content: "80";
+    content: "Street";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street-number_label:after {
-    content: "81";
+    content: "No.";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_zip_label:after {
-    content: "82";
+    content: "Post code";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_city_label:after {
-    content: "83";
+    content: "City";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_country_label:after {
-    content: "84";
+    content: "Country";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email_label:after {
-    content: "88";
+    content: "E-mail address";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email-confirmation_label:after {
-    content: "90";
+    content: "Confirm e-mail address";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "92";
+    content: "Phone (optional)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email:before {
-    content: "94";
+    content: "Other details";
     display: block;
     margin-top: 24px;
     padding-bottom: 16px;
@@ -168,17 +168,17 @@
 }
 
 .weitereAngabenTeilnehmer p:after{
-    content: "94";
+    content: "Other details";
     font-size: 1rem !important;
 }
 
 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
-    content: "96";
+    content: "Plant/site";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_label:after{
-    content: "99";
+    content: "I would like to arrive on the following date";
     font-size: 14px;
 }
 
@@ -188,42 +188,42 @@
 }
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_label:after{
-    content: "102";
+    content: "My choice for the intergalactic dinner:";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_label:after{
-    content: "128";
+    content: "My guest’s choice for the intergalactic dinner";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "103";
+    content: "Meat menu";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "104";
+    content: "Vegetarian menu";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-6 .customization2_attendee_further-data_custom-question_label:after{
-    content: "105";
+    content: "Food intolerances (optional)";
     font-size: 14px;
 }
 
 .customization2_attendee_edit-action_save:after {
-    content: "107";
+    content: "Save";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_title:after {
-    content: "110";
+    content: "I’M COMING WITH A GUEST";
     font-size: 16px;
 }
 
 .customization-button-previous:after {
-    content: "170";
+    content: "Edit selection";
     font-size: 16px;
 }
 
@@ -233,27 +233,26 @@
 }
 
 .custom_terms_checkbox .customization2_booking-terms_text:after {
-    content: "352";
+    content: "I have noted that the event will be conducted in accordance with the coronavirus regulations that apply in the state of Saxony at the time of the event. I will ensure that I can present all the certificates that are required on the day of the event.";
     font-size: 14px
 }
 
 .customization2_booking-terms_text:after {
-    content: "353";
+    content: "I have noted that the event will be conducted in accordance with the coronavirus regulations that apply in the state of Saxony at the time of the event. I will ensure that I can present all the certificates that are required on the day of the event.";
     font-size: 14px
 }
 
 .customization2_booking-terms_custom-term-1:after {
-    content: "354";
+    content: "Film and photo advice";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-2:after {
-    content: "355";
+    content: "Privacy";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-3:after {
-    content: "356";
+    content: "Compliance";
     font-size: 14px;
 }
-
