--- a/customizations/organization/15493/Progroup Translation/05_FR/Intern/page1.css
+++ b/customizations/organization/15493/Progroup Translation/05_FR/Intern/page1.css
@@ -18,17 +18,17 @@ vv-booking-editing-prompt button {
 }
 
 ul.event-categories li:nth-of-type(1) .customization-category-name:after {
-    content: "49";
+    content: "Je viens seul(e)";
     font-size: 1rem;
 }
 
 ul.event-categories li:nth-of-type(2) .customization-category-name:after {
-    content: "50";
+    content: "Je viens accompagné(e)";
     font-size: 1rem;
 }
 
 ul.event-categories:after {
-    content: "51";
+    content: "Tu es chaleureusement invité(e), toi et ton/ta partenaire. La participation est gratuite.";
     font-size: 16px;
     display: block;
     margin: 20px;
@@ -37,12 +37,12 @@ ul.event-categories:after {
 }
 
 .customization-encrypted-connection:after {
-    content: "53";
+    content: "Connexion sécurisée";
     font-size:14px
 }
 
 vv-booking-editing-prompt span:after {
-    content: "54";
+    content: "Déjà connecté(e) ? Tu peux te connecter ici.";
     text-indent: 0;
     font-size: 14px;
     line-height: normal;
