--- a/customizations/organization/15493/Progroup Translation/05_FR/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/05_FR/Intern/page2.css
@@ -69,39 +69,39 @@
 }
 
 .customization2_attendee-1 .customization2_attendee_title:after {
-    content: "64";
+    content: "JE VIENS SEUL(E)";
     font-size: 16px;
 }
 
 .customization2_attendee_contact-data_headline::after {
-    content: "66";
+    content: "Informations personnelles";
     text-indent: 0px;
     display: block;
     line-height: initial;
 }
 
 .customization2_attendee_contact-data_salutation_label:after {
-    content: "67";
+    content: "Civilité";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_title_label:after {
-    content: "73";
+    content: "Titre (en option)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_first-name_label:after {
-    content: "72";
+    content: "Prénom";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_last-name_label:after {
-    content: "76";
+    content: "Nom";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street:before {
-    content: "78";
+    content: "Adresse privée";
     display: block;
     margin-top: 24px;
     font-size: 1rem;
@@ -110,7 +110,7 @@
 }
 
 .customization2_attendee_contact-data_street > vv-input::before {
-    content: "79";
+    content: "(pour l'envoi postal de documents, comme ton ticket, le programme et d'autres informations)";
     display: block;
     padding-bottom: 16px;
     font-size: 14px;
@@ -118,47 +118,47 @@
 }
 
 .customization2_attendee_contact-data_street_label:after {
-    content: "80";
+    content: "Rue";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street-number_label:after {
-    content: "81";
+    content: "N°";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_zip_label:after {
-    content: "82";
+    content: "Code postal";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_city_label:after {
-    content: "83";
+    content: "Ville";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_country_label:after {
-    content: "84";
+    content: "Pays";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email_label:after {
-    content: "88";
+    content: "Adresse e-mail";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email-confirmation_label:after {
-    content: "90";
+    content: "Confirmation de l'adresse e-mail";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "92";
+    content: "Téléphone (en option)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email:before {
-    content: "94";
+    content: "Autres informations";
     display: block;
     margin-top: 24px;
     padding-bottom: 16px;
@@ -168,17 +168,17 @@
 }
 
 .weitereAngabenTeilnehmer p:after{
-    content: "94";
+    content: "Autres informations";
     font-size: 1rem !important;
 }
 
 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
-    content: "96";
+    content: "Usine/site";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_label:after{
-    content: "99";
+    content: "Je souhaite arriver à la date suivante";
     font-size: 14px;
 }
 
@@ -188,42 +188,42 @@
 }
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_label:after{
-    content: "102";
+    content: "Pour le dîner intergalactique, je choisis:";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_label:after{
-    content: "128";
+    content: "Pour le dîner intergalactique, mon/ma partenaire choisit:";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "103";
+    content: "Menu à base de viande";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "104";
+    content: "Menu végétarien";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-6 .customization2_attendee_further-data_custom-question_label:after{
-    content: "105";
+    content: "Intolérances (en option)";
     font-size: 14px;
 }
 
 .customization2_attendee_edit-action_save:after {
-    content: "107";
+    content: "Enregistrer";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_title:after {
-    content: "110";
+    content: "JE VIENS ACCOMPAGNÉ(E)";
     font-size: 16px;
 }
 
 .customization-button-previous:after {
-    content: "170";
+    content: "Modifier la sélection";
     font-size: 16px;
 }
 
@@ -233,27 +233,27 @@
 }
 
 .custom_terms_checkbox .customization2_booking-terms_text:after {
-    content: "352";
+    content: "J'ai pris connaissance du fait que l'événement a lieu conformément aux prescriptions relatives au coronavirus alors en vigueur dans le Land de Saxe au moment de l'événement. Je veille à être en mesure de présenter tous les certificats nécessaires au jour de l'événement.";
     font-size: 14px
 }
 
 .customization2_booking-terms_text:after {
-    content: "353";
+    content: "J'accepte les conditions suivantes:";
     font-size: 14px
 }
 
 .customization2_booking-terms_custom-term-1:after {
-    content: "354";
+    content: "Note concernant les films et les photographies";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-2:after {
-    content: "355";
+    content: "Protection des données";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-3:after {
-    content: "356";
+    content: "Conformité";
     font-size: 14px;
 }
 
