--- a/customizations/organization/15493/Progroup Translation/05_FR/Intern/page3.css
+++ b/customizations/organization/15493/Progroup Translation/05_FR/Intern/page3.css
@@ -13,28 +13,28 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 .ew-confirmation__header .header__label:after {
-    content: "172";
+    content: "Confirmation de l'inscription";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .customization-confirmation-description:after {
-	content: "174";
+	content: "Merci de ton inscription. Tu recevras sous peu ta confirmation par courriel.";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .ew-confirmation__text-paragraph:after {
-	content: "178";
+	content: "Tu peux consulter et gérer ton inscription à tout moment sur le portail. Pour te connecter à cette plate-forme, tu as besoin de ton numéro d'enregistrement et de ton adresse e-mail.";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .customization-client-portal-link:after {
-    content: "180";
+    content: "Vers le portail d'enregistrement";
     text-indent: 0;
     display: block;
     line-height: normal;
@@ -42,7 +42,7 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 p.ew-confirmation__organizer-contact span:nth-of-type(1):after {
-	content: "182";
+	content: "En cas de questions, tu peux t'adresser à tout moment à events@progroup.ag.";
 	text-indent: 0;
 	line-height: normal;
 	font-size: 14px;
