--- a/customizations/organization/15493/Progroup Translation/04_EN/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/04_EN/Intern/page2.css
@@ -232,6 +232,26 @@
     font-size: 16px;
 }
 
+.customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
+    content: "330";
+    font-size: 14px;
+}
+
+.customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
+    content: "331";
+    font-size: 14px;
+}
+
+.customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
+    content: "332";
+    font-size: 14px;
+}
+
+.customization2_attendee-2 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
+    content: "334";
+    font-size: 14px;
+}
+
 .custom_terms_checkbox .customization2_booking-terms_text:after {
     content: "I have noted that the event will be conducted in accordance with the coronavirus regulations that apply in the state of Saxony at the time of the event. I will ensure that I can present all the certificates that are required on the day of the event.";
     font-size: 14px
