--- a/customizations/organization/15493/Progroup Translation/05_FR/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/05_FR/Intern/page2.css
@@ -232,6 +232,27 @@
     font-size: 16px;
 }
 
+
+.customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
+    content: "330";
+    font-size: 14px;
+}
+
+.customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
+    content: "331";
+    font-size: 14px;
+}
+
+.customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
+    content: "332";
+    font-size: 14px;
+}
+
+.customization2_attendee-2 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
+    content: "334";
+    font-size: 14px;
+}
+
 .custom_terms_checkbox .customization2_booking-terms_text:after {
     content: "J'ai pris connaissance du fait que l'événement a lieu conformément aux prescriptions relatives au coronavirus alors en vigueur dans le Land de Saxe au moment de l'événement. Je veille à être en mesure de présenter tous les certificats nécessaires au jour de l'événement.";
     font-size: 14px
