--- a/customizations/organization/15493/Progroup Translation/03_CZ/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/03_CZ/Intern/page2.css
@@ -35,8 +35,8 @@
 .customization2_booking-terms_custom-term,
 .customization2_booking-terms_text,
 .weitereAngabenTeilnehmer p,
-.customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label,
-.customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label  {
+.customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label,
+.customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label  {
     font-size: 0 !important;
 }
 
