--- a/customizations/organization/15493/Progroup Translation/05_FR/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/05_FR/Intern/page2.css
@@ -55,7 +55,7 @@
 .customization2_attendee_contact-data_last-name_error:after,
 .customization2_attendee_contact-data_first-name_error:after,
 .customization2_attendee_contact-data_salutation_error:after{
-    content: "Missing 3";
+    content: "Veuillez remplir le formulaire";
     text-indent: 0;
     display: block;
     line-height: initial;
@@ -183,7 +183,7 @@
 }
 
 .customization2_attendee_further-data_custom-question-4 .customization2_attendee_further-data_custom-question_label:after{
-    content: "Missing 1";
+    content: "J'ai besoin d'une chambre d'hôtel";
     font-size: 14px;
 }
 
@@ -228,28 +228,28 @@
 }
 
 .customization2_attendee_edit-action_cancel:after {
-    content: "Missing 2";
+    content: "Annuler";
     font-size: 16px;
 }
 
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "330";
+    content: "Pour le dîner intergalactique, mon/ma partenaire choisit :";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "331";
+    content: "Menu à base de viande";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "332";
+    content: "Menu végétarien";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
-    content: "334";
+    content: "Intolérances (en option)";
     font-size: 14px;
 }
 
