--- a/customizations/organization/15493/Progroup Translation/03_CZ/Extern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/03_CZ/Extern/page2.css
@@ -62,7 +62,7 @@
 .customization2_attendee_contact-data_last-name_error:after,
 .customization2_attendee_contact-data_first-name_error:after,
 .customization2_attendee_contact-data_salutation_error:after{
-    content: "Missing 3";
+    content: "Vyplňte prosím";
     text-indent: 0;
     display: block;
     line-height: initial;
@@ -70,39 +70,39 @@
 }
 
 .customization2_attendee-1 .customization2_attendee_title:after {
-    content: "264";
+    content: "PŘIJDU SÁM";
     font-size: 16px;
 }
 
 .customization2_attendee_contact-data_headline::after {
-    content: "265";
+    content: "Osobní údaje";
     text-indent: 0px;
     display: block;
     line-height: initial;
 }
 
 .customization2_attendee_contact-data_salutation_label:after {
-    content: "266";
+    content: "Oslovení";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_title_label:after {
-    content: "272";
+    content: "Titul (volitelně)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_first-name_label:after {
-    content: "271";
+    content: "Příjmení";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_last-name_label:after {
-    content: "275";
+    content: "Příjmení";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_company::before {
-    content: "276";
+    content: "Poštovní adresa pro informace o akci";
     display: block;
     margin-top: 24px;
     font-size: 1rem;
@@ -111,7 +111,7 @@
 }
 
 .customization2_attendee_contact-data_company > vv-input::before {
-    content: "277";
+    content: "(Pro zasílání dalších dokumentů poštou)";
     display: block;
     padding-bottom: 16px;
     font-size: 14px;
@@ -119,57 +119,57 @@
 }
 
 .customization2_attendee_contact-data_company_label:after {
-    content: "278";
+    content: "Organizace/Firma (volitelně)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street_label:after {
-    content: "279";
+    content: "Ulice";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street-number_label:after {
-    content: "280";
+    content: "Čís.";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_zip_label:after {
-    content: "281";
+    content: "PSČ";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_city_label:after {
-    content: "282";
+    content: "Místo";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_country_label:after {
-    content: "283";
+    content: "Země";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email_label:after {
-    content: "288";
+    content: "E-mailová adresa";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email-confirmation_label:after {
-    content: "290";
+    content: "E-mailová adresa Potvrzení";
     font-size: 14px;
 }
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "292";
+    content: "Telefon (volitelně)";
     font-size: 14px;
 }
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:before{
-    content: "294";
+    content: "Potřebuji hotelový transfer";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-2 .vv-tooltip__content:after{
-    content: "300";
+    content: "Vezměte prosím na vědomí, že můžeme nabídnout pouze hotelový transfer našich partnerských hotelů. Přehled partnerských hotelů obdržíte spolu s potvrzením registrace.";
     font-size: 0.75rem;
     left: calc(50% - 200px / 2);
     width: 200px;
@@ -181,7 +181,7 @@
 }
 
 vv-attendee:first-of-type .customization2_attendee_further-data_custom-question-3:before {
-    content: "302";
+    content: "Výběr jídla";
     font-size: 1rem;
     font-weight: 600;
     color: #343a3f;
@@ -189,42 +189,42 @@ vv-attendee:first-of-type .customization2_attendee_further-data_custom-question-
 
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_label:after{
-    content: "303";
+    content: "Volím intergalaktickou večeři";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_label:after{
-    content: "350";
+    content: "Můj doprovod vybírá pro intergalaktickou večeři";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "304";
+    content: "Masové menu";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "305";
+    content: "Vegetariánské menu";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-4 .customization2_attendee_further-data_custom-question_label:after{
-    content: "307";
+    content: "Intolerance (volitelně)";
     font-size: 14px;
 }
 
 .customization2_attendee_edit-action_save:after {
-    content: "309";
+    content: "Uložit";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_title:after {
-    content: "311";
+    content: "PŘIJDU S DOPROVODEM";
     font-size: 16px;
 }
 
 vv-attendee:nth-of-type(2) .customization2_attendee_further-data_custom-question-1:before {
-    content: "329";
+    content: "Další údaje";
     font-size: 1rem;
     font-weight: 600;
     color: #343a3f;
@@ -234,56 +234,56 @@ vv-attendee:nth-of-type(2) .customization2_attendee_further-data_custom-question
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "330";
+    content: "Můj doprovod vybírá pro intergalaktickou večeři";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "331";
+    content: "Masové menu";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "332";
+    content: "Vegetariánské menu";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
-    content: "334";
+    content: "Intolerance (volitelně)";
     font-size: 14px;
 }
 
 .customization-button-previous:after {
-    content: "170";
+    content: "Zpracovat výběr";
     font-size: 14px;
 }
 
 .customization2_attendee_edit-action_cancel:after {
-    content: "Missing 2";
+    content: "Zrušit";
     font-size: 14px;
 }
 
 .custom_terms_checkbox .customization2_booking-terms_text:after {
-    content: "352";
+    content: "Vzal jsem na vědomí, že akce bude probíhat v souladu s předpisy koronavirové pandemie spolkové země Sasko platnými v době konání akce. Zajistím, abych mohl v den konání akce předložit všechna potřebná osvědčení.";
     font-size: 14px
 }
 
 .customization2_booking-terms_text:after {
-    content: "353";
+    content: "Souhlasím s následujícími podmínkami:";
     font-size: 14px
 }
 
 .customization2_booking-terms_custom-term-1:after {
-    content: "354";
+    content: "Upozornění na filmování a fotografování";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-2:after {
-    content: "355";
+    content: "Ochrana dat";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-3:after {
-    content: "356";
+    content: "Soulad s předpisy";
     font-size: 14px;
 }
