--- a/customizations/organization/15493/Progroup Translation/03_CZ/Extern/page3.css
+++ b/customizations/organization/15493/Progroup Translation/03_CZ/Extern/page3.css
@@ -13,28 +13,28 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 .ew-confirmation__header .header__label:after {
-    content: "359";
+    content: "Potvrzení přihlášení";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .customization-confirmation-description:after {
-	content: "360";
+	content: "Srdečně děkujeme za Vaše přihlášení. Brzy obdržíte potvrzení e-mailem.";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .ew-confirmation__text-paragraph:after {
-	content: "362";
+	content: "Svou registraci můžete kdykoli zobrazit a spravovat na portálu. K přihlášení potřebujete své registrační číslo a e-mailovou adresu.";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .customization-client-portal-link:after {
-    content: "363";
+    content: "K přihlašovacímu portálu";
     text-indent: 0;
     display: block;
     line-height: normal;
@@ -42,7 +42,7 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 p.ew-confirmation__organizer-contact span:nth-of-type(1):after {
-	content: "364";
+	content: "V případě dotazů se kdykoliv obraťte na";
 	text-indent: 0;
 	line-height: normal;
 	font-size: 14px;
