--- a/customizations/organization/15493/Progroup Translation/04_EN/Extern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/04_EN/Extern/page2.css
@@ -62,7 +62,7 @@
 .customization2_attendee_contact-data_last-name_error:after,
 .customization2_attendee_contact-data_first-name_error:after,
 .customization2_attendee_contact-data_salutation_error:after{
-    content: "Missing 3";
+    content: "Please fill in";
     text-indent: 0;
     display: block;
     line-height: initial;
@@ -70,39 +70,39 @@
 }
 
 .customization2_attendee-1 .customization2_attendee_title:after {
-    content: "264";
+    content: "I’M COMING ON MY OWN";
     font-size: 16px;
 }
 
 .customization2_attendee_contact-data_headline::after {
-    content: "265";
+    content: "Personal details";
     text-indent: 0px;
     display: block;
     line-height: initial;
 }
 
 .customization2_attendee_contact-data_salutation_label:after {
-    content: "266";
+    content: "Title";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_title_label:after {
-    content: "272";
+    content: "Title (optional)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_first-name_label:after {
-    content: "271";
+    content: "First name";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_last-name_label:after {
-    content: "275";
+    content: "Last name";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_company::before {
-    content: "276";
+    content: "Postal address for event information";
     display: block;
     margin-top: 24px;
     font-size: 1rem;
@@ -111,7 +111,7 @@
 }
 
 .customization2_attendee_contact-data_company > vv-input::before {
-    content: "277";
+    content: "(For sending further documents in the post)";
     display: block;
     padding-bottom: 16px;
     font-size: 14px;
@@ -119,57 +119,57 @@
 }
 
 .customization2_attendee_contact-data_company_label:after {
-    content: "278";
+    content: "Organisation/company (optional)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street_label:after {
-    content: "279";
+    content: "Street";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street-number_label:after {
-    content: "280";
+    content: "No.";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_zip_label:after {
-    content: "281";
+    content: "Post code";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_city_label:after {
-    content: "282";
+    content: "City";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_country_label:after {
-    content: "283";
+    content: "Country";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email_label:after {
-    content: "288";
+    content: "E-mail address";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email-confirmation_label:after {
-    content: "290";
+    content: "Confirm e-mail address";
     font-size: 14px;
 }
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "292";
+    content: "Phone (optional)";
     font-size: 14px;
 }
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:before{
-    content: "294";
+    content: "I require a hotel transfer";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-2 .vv-tooltip__content:after{
-    content: "300";
+    content: "Please note that we are only able to offer a hotel transfer from our partner hotels. You will receive an overview of the partner hotels with the registration confirmation.";
     font-size: 0.75rem;
     left: calc(50% - 200px / 2);
     width: 200px;
@@ -181,7 +181,7 @@
 }
 
 vv-attendee:first-of-type .customization2_attendee_further-data_custom-question-3:before {
-    content: "302";
+    content: "Meal choice";
     font-size: 1rem;
     font-weight: 600;
     color: #343a3f;
@@ -189,42 +189,42 @@ vv-attendee:first-of-type .customization2_attendee_further-data_custom-question-
 
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_label:after{
-    content: "303";
+    content: "My choice for the intergalactic dinner";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_label:after{
-    content: "350";
+    content: "My guest’s choice for the intergalactic dinner";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "304";
+    content: "Meat menu";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "305";
+    content: "Vegetarian menu";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-4 .customization2_attendee_further-data_custom-question_label:after{
-    content: "307";
+    content: "Food intolerances (optional)";
     font-size: 14px;
 }
 
 .customization2_attendee_edit-action_save:after {
-    content: "309";
+    content: "Save";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_title:after {
-    content: "311";
+    content: "I’M COMING WITH A GUEST";
     font-size: 16px;
 }
 
 vv-attendee:nth-of-type(2) .customization2_attendee_further-data_custom-question-1:before {
-    content: "329";
+    content: "Other details";
     font-size: 1rem;
     font-weight: 600;
     color: #343a3f;
@@ -234,56 +234,56 @@ vv-attendee:nth-of-type(2) .customization2_attendee_further-data_custom-question
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "330";
+    content: "My guest’s choice for the intergalactic dinner";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "331";
+    content: "Meat menu";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "332";
+    content: "Vegetarian menu";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
-    content: "334";
+    content: "Food intolerances (optional)";
     font-size: 14px;
 }
 
 .customization-button-previous:after {
-    content: "170";
+    content: "Edit selection";
     font-size: 14px;
 }
 
 .customization2_attendee_edit-action_cancel:after {
-    content: "Missing 2";
+    content: "Cancel";
     font-size: 14px;
 }
 
 .custom_terms_checkbox .customization2_booking-terms_text:after {
-    content: "352";
+    content: "I have noted that the event will be conducted in accordance with the coronavirus regulations that apply in the state of Saxony at the time of the event. I will ensure that I can present all the certificates that are required on the day of the event.";
     font-size: 14px
 }
 
 .customization2_booking-terms_text:after {
-    content: "353";
+    content: "I agree to the following conditions:";
     font-size: 14px
 }
 
 .customization2_booking-terms_custom-term-1:after {
-    content: "354";
+    content: "Film and photo advice";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-2:after {
-    content: "355";
+    content: "Privacy";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-3:after {
-    content: "356";
+    content: "Compliance";
     font-size: 14px;
 }
