--- a/customizations/organization/15493/Progroup Translation/05_FR/Extern/bookingportal.css
+++ b/customizations/organization/15493/Progroup Translation/05_FR/Extern/bookingportal.css
@@ -1,5 +1,5 @@
 .booking-editing-auth vv-heading:after{
-    content:"55";
+    content:"Saisis tes identifiants";
     text-indent: 0;
 	line-height: normal;
 	font-size:16px;
@@ -8,7 +8,7 @@
 }
 
 .booking-editing-auth vv-input[name="bookingId"] label p:after {
-    content:"56";
+    content:"Numéro d'enregistrement";
     text-indent: 0;
 	line-height: normal;
 	font-size:16px;
@@ -16,12 +16,12 @@
 }
 
 .booking-editing-auth vv-input[name="bookingId"] + vv-show-errors .error-text:after {
-    content:"Missing 4";
+    content:"Veuillez saisir un numéro de réservation valide";
 	font-size:12px;
 }
 
 .booking-editing-auth vv-input[name="email"] label p:after {
-    content:"57";
+    content:"Adresse e-mail";
     text-indent: 0;
 	line-height: normal;
 	font-size:16px;
@@ -29,27 +29,27 @@
 }
 
 .booking-editing-auth vv-input[name="email"] + vv-show-errors .error-text:after {
-    content:"Missing 5";
+    content:"Veuillez saisir une adresse e-mail valide";
 	font-size:12px;
 }
 
 .booking-editing-auth vv-button:nth-of-type(1) button:after {
-    content:"58";
+    content:"Vers la sélection";
 	font-size:16px;
 }
 
 .booking-editing-auth vv-button:nth-of-type(2) button:after {
-    content:"59";
+    content:"Continuer";
 	font-size:16px;
 }
 
 .customization3_edit-booking_header_title:after{
-    content:"191";
+    content:"Mon portail de réservation";
 	font-size:14px;
 }
 
 .customization3_edit-booking_header_days-to-go vv-text:nth-of-type(1):after{
-    content:"192";
+    content:"ENCORE";
     text-indent: 0;
 	line-height: normal;
 	font-size:14px;
@@ -57,7 +57,7 @@
 }
 
 .customization3_edit-booking_header_days-to-go vv-text:nth-of-type(2):after{
-    content:"192";
+    content:"JOURS";
     text-indent: 0;
 	line-height: normal;
 	font-size:14px;
@@ -65,109 +65,107 @@
 }
 
 .customization3_edit-booking_header_logout:after{
-    content:"Missing 6";
+    content:"Se désinscrire";
 	font-size:14px;
 }
 
 .customization3_edit-booking_main_booking-date_label:after{
-    content:"194";
+    content:"Réservé le";
 	font-size:13px;
 }
 
 .booking-status--paid.customization3_edit-booking_main_booking-status:after{
-    content:"197";
+    content:"Inscription terminée";
 	font-size:16px;
 }
 
-
-
 .customization3_edit-booking_main_event_dates:after{
-    content:"234";
+    content:"Du 5 novembre à 16h30 au 6 novembre 2022 à 03h00";
 	font-size:13px;
 }
 
 .customization3_tab-group_tab:nth-of-type(1) .customization3_tab-group-mobile_tab_label_text:after{
-    content:"201";
+    content:"Participant";
 	font-size:14px;
 }
 
 .customization3_tab-group_tab:nth-of-type(2) .customization3_tab-group-mobile_tab_label_text:after{
-    content:"221";
+    content:"Personne effectuant la réservation";
 	font-size:14px;
 }
 
 .customization3_tab-group_tab:nth-of-type(3) .customization3_tab-group-mobile_tab_label_text:after{
-    content:"225";
+    content:"Réservation";
 	font-size:14px;
 }
 
 .customization3_tab-group_tab:nth-of-type(4) .customization3_tab-group-mobile_tab_label_text:after{
-    content:"233";
+    content:"ÉVÉNEMENT";
 	font-size:14px;
 }
 
 .customization2_attendee-1 .customization3_attendee_ticket-category_title:after{
-    content:"228";
+    content:"Je viens seul(e)";
 	font-size:14px;
 }
 
 .customization2_attendee-2 .customization3_attendee_ticket-category_title:after{
-    content:"230";
+    content:"Je viens accompagné(e)";
 	font-size:14px;
 }
 
 .customization2_booker_contact-data_headline:after{
-    content:"222";
+    content:"Personne à contacter";
 	font-size:16px;
 }
 
 .customization3_invoice-box_header_title:after{
-    content:"226";
+    content:"Résumé";
 	font-size:16px;
 }
 
 .customization3_invoice-box_category_label:after{
-    content:"227";
+    content:"DÉSIGNATION";
 	font-size:14px;
 }
 
 .customization3_invoice-box_quantity_label:after{
-    content:"229";
+    content:"Nombre";
 	font-size:14px;
 }
 
 .customization3_invoice-box_table-body tr:nth-of-type(1) .customization3_invoice-box_category_value .grid-element__value:after{
-    content:"228";
+    content:"Je viens seul(e)";
 	font-size:13px;
 }
 
 .customization3_invoice-box_table-body tr:nth-of-type(2) .customization3_invoice-box_category_value .grid-element__value:after{
-    content:"230";
+    content:"Je viens accompagné(e)";
 	font-size:13px;
 }
 
 .customization3_edit-booking_event_dates:after{
-    content:"234";
+    content:"Du 5 novembre à 16h30 au 6 novembre 2022 à 03h00";
 	font-size:14px;
 }
 
 .customization3_edit-booking_event_organizer > div:first-of-type > div:first-of-type .data-item__label:after {
-	content:"233";
+	content:"ÉVÉNEMENT";
 	font-size: 13px;
 }
 
 .organizer__name.data-item__value:after {
-	content:"237";
+	content:"Équipe spatiale Progroup";
 	font-size: 16px;
 }
 
 .event__contact.data-item .data-item__label:after{
-	content:"239";
+	content:"Contact";
 	font-size: 13px;
 }
 
 .terms__label:after{
-	content:"242";
+	content:"Conditions de réservation";
 	font-size: 13px;
 }
 
