--- a/customizations/organization/15493/Progroup Translation/07_PL/Extern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/07_PL/Extern/page2.css
@@ -62,7 +62,7 @@
 .customization2_attendee_contact-data_last-name_error:after,
 .customization2_attendee_contact-data_first-name_error:after,
 .customization2_attendee_contact-data_salutation_error:after{
-    content: "Missing 3";
+    content: "Proszę wypełnić";
     text-indent: 0;
     display: block;
     line-height: initial;
@@ -70,39 +70,39 @@
 }
 
 .customization2_attendee-1 .customization2_attendee_title:after {
-    content: "264";
+    content: "PRZYBĘDĘ BEZ OSOBY TOWARZYSZĄCEJ";
     font-size: 16px;
 }
 
 .customization2_attendee_contact-data_headline::after {
-    content: "265";
+    content: "Dane osobowe";
     text-indent: 0px;
     display: block;
     line-height: initial;
 }
 
 .customization2_attendee_contact-data_salutation_label:after {
-    content: "266";
+    content: "Zwrot grzecznościowy";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_title_label:after {
-    content: "272";
+    content: "Tytuł (opcjonalnie)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_first-name_label:after {
-    content: "271";
+    content: "Imię";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_last-name_label:after {
-    content: "275";
+    content: "Nazwisko";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_company::before {
-    content: "276";
+    content: "Adres wysyłkowy do przesłania informacji o imprezie";
     display: block;
     margin-top: 24px;
     font-size: 1rem;
@@ -111,7 +111,7 @@
 }
 
 .customization2_attendee_contact-data_company > vv-input::before {
-    content: "277";
+    content: "(Do wysłania pocztą tradycyjną innych dokumentów)";
     display: block;
     padding-bottom: 16px;
     font-size: 14px;
@@ -119,57 +119,57 @@
 }
 
 .customization2_attendee_contact-data_company_label:after {
-    content: "278";
+    content: "Organizacja/firma (opcjonalnie)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street_label:after {
-    content: "279";
+    content: "Ulica";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street-number_label:after {
-    content: "280";
+    content: "Numer domu";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_zip_label:after {
-    content: "281";
+    content: "Kod pocztowy";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_city_label:after {
-    content: "282";
+    content: "Miejscowość";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_country_label:after {
-    content: "283";
+    content: "Kraj";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email_label:after {
-    content: "288";
+    content: "Adres e-mail";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email-confirmation_label:after {
-    content: "290";
+    content: "Potwierdzenie adresu e-mail";
     font-size: 14px;
 }
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "292";
+    content: "Telefon (opcjonalnie)";
     font-size: 14px;
 }
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:before{
-    content: "294";
+    content: "Potrzebuję transfer z hotelu";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-2 .vv-tooltip__content:after{
-    content: "300";
+    content: "Zwracamy uwagę, że możemy zaoferować transfer tylko z naszych hoteli partnerskich. Wykaz hoteli partnerskich otrzymasz wraz z potwierdzeniem rejestracji.";
     font-size: 0.75rem;
     left: calc(50% - 200px / 2);
     width: 200px;
@@ -181,7 +181,7 @@
 }
 
 vv-attendee:first-of-type .customization2_attendee_further-data_custom-question-3:before {
-    content: "302";
+    content: "Wybór posiłku";
     font-size: 1rem;
     font-weight: 600;
     color: #343a3f;
@@ -189,42 +189,42 @@ vv-attendee:first-of-type .customization2_attendee_further-data_custom-question-
 
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_label:after{
-    content: "303";
+    content: "Na kolację międzygalaktyczną wybieram";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_label:after{
-    content: "350";
+    content: "Moja osoba towarzysząca wybiera na kolację międzygalaktyczną:";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "304";
+    content: "Zestaw mięsny";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "305";
+    content: "Zestaw wegetariański";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-4 .customization2_attendee_further-data_custom-question_label:after{
-    content: "307";
+    content: "Nietolerancja pokarmowa (opcjonalnie)";
     font-size: 14px;
 }
 
 .customization2_attendee_edit-action_save:after {
-    content: "309";
+    content: "Zapisz";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_title:after {
-    content: "311";
+    content: "PRZEBĘDĘ Z OSOBĄ TOWARZYSZĄCĄ";
     font-size: 16px;
 }
 
 vv-attendee:nth-of-type(2) .customization2_attendee_further-data_custom-question-1:before {
-    content: "329";
+    content: "Pozostałe informacje";
     font-size: 1rem;
     font-weight: 600;
     color: #343a3f;
@@ -234,56 +234,56 @@ vv-attendee:nth-of-type(2) .customization2_attendee_further-data_custom-question
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "330";
+    content: "Moja osoba towarzysząca wybiera na kolację międzygalaktyczną:";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "331";
+    content: "Zestaw mięsny";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "332";
+    content: "Zestaw wegetariański";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
-    content: "334";
+    content: "Nietolerancja pokarmowa (opcjonalnie)";
     font-size: 14px;
 }
 
 .customization-button-previous:after {
-    content: "170";
+    content: "Modyfikuj wybór";
     font-size: 14px;
 }
 
 .customization2_attendee_edit-action_cancel:after {
-    content: "Missing 2";
+    content: "Anuluj";
     font-size: 14px;
 }
 
 .custom_terms_checkbox .customization2_booking-terms_text:after {
-    content: "352";
+    content: "Potwierdzam przyjęcie do wiadomości, że impreza zostanie zorganizowana w reżimie obostrzeń pandemicznych, jakie będą obowiązywać w danym momencie w Saksonii. Zadbam osobiście o posiadanie w dniu imprezy wszystkich niezbędnych certyfikatów.";
     font-size: 14px
 }
 
 .customization2_booking-terms_text:after {
-    content: "353";
+    content: "Akceptuję następujące warunki:";
     font-size: 14px
 }
 
 .customization2_booking-terms_custom-term-1:after {
-    content: "354";
+    content: "Informacja o filmowaniu i fotografowaniu";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-2:after {
-    content: "355";
+    content: "Ochrona danych osobowych";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-3:after {
-    content: "356";
+    content: "Zgodność z przepisami";
     font-size: 14px;
 }
