--- a/customizations/organization/15493/Progroup Translation/07_PL/Extern/progressbar.css
+++ b/customizations/organization/15493/Progroup Translation/07_PL/Extern/progressbar.css
@@ -7,7 +7,7 @@
 }
 
 .selection .progress-point__label:after {
-    content: "60";
+    content: "Wybór";
     text-indent: 0;
     font-size: 14px;
     display: block;
@@ -17,7 +17,7 @@
 }
 
 .information .progress-point__label:after {
-    content: "61";
+    content: "Dane";
     text-indent: 0;
     font-size: 14px;
     display: block;
@@ -27,7 +27,7 @@
 }
 
 .confirmation .progress-point__label:after {
-    content: "62";
+    content: "Potwierdzenie";
     text-indent: 0;
     font-size: 14px;
     display: block;
