--- a/customizations/organization/15493/Progroup Translation/07_PL/Extern/page1.css
+++ b/customizations/organization/15493/Progroup Translation/07_PL/Extern/page1.css
@@ -50,4 +50,7 @@ vv-booking-editing-prompt span:after {
 
 vv-booking-editing-prompt button:after {
     content: "Tutaj przejdziesz do swojej rejestracji";
+    font-size: 14px;
+    line-height: normal;
+    text-indent: 0;
 }
