--- a/customizations/organization/15493/Progroup Translation/07_PL/Intern/page1.css
+++ b/customizations/organization/15493/Progroup Translation/07_PL/Intern/page1.css
@@ -50,6 +50,9 @@ vv-booking-editing-prompt span:after {
 
 vv-booking-editing-prompt button:after {
     content: "54";
+    font-size: 14px;
+    line-height: normal;
+    text-indent: 0;
 }
 
 
