--- a/customizations/organization/15493/Progroup Translation/06_IT/Intern/page1.css
+++ b/customizations/organization/15493/Progroup Translation/06_IT/Intern/page1.css
@@ -18,17 +18,17 @@ vv-booking-editing-prompt button {
 }
 
 ul.event-categories li:nth-of-type(1) .customization-category-name:after {
-    content: "49";
+    content: "Vengo da solo";
     font-size: 1rem;
 }
 
 ul.event-categories li:nth-of-type(2) .customization-category-name:after {
-    content: "50";
+    content: "Vengo accompagnato";
     font-size: 1rem;
 }
 
 ul.event-categories:after {
-    content: "51";
+    content: "Tu e il tuo accompagnatore siete invitati di cuore. La partecipazione è gratuita.";
     font-size: 16px;
     display: block;
     margin: 20px;
@@ -37,19 +37,19 @@ ul.event-categories:after {
 }
 
 .customization-encrypted-connection:after {
-    content: "53";
+    content: "Collegamento cifrato";
     font-size:14px
 }
 
 vv-booking-editing-prompt span:after {
-    content: "54";
+    content: "Già registrato? Clicca qui per accedere alla tua registrazione.";
     text-indent: 0;
     font-size: 14px;
     line-height: normal;
 }
 
 vv-booking-editing-prompt button:after {
-    content: "54";
+    content: "Già registrato? Clicca qui per accedere alla tua registrazione.";
     font-size: 14px;
     line-height: normal;
     text-indent: 0;
