--- a/customizations/organization/15493/Progroup Translation/07_PL/Extern/tooltips.css
+++ b/customizations/organization/15493/Progroup Translation/07_PL/Extern/tooltips.css
@@ -1,3 +1,4 @@
-div.vv-tooltip__content {
+.collapsible-wrapper_toggle-action div.vv-tooltip__content,
+.collapsible-wrapper__view-actions div.vv-tooltip__content {
 	display:none !important
 }
